@@ -28,6 +28,8 @@ mockitoVersion=3.12.4
 jnaVersion=5.9.0
 scala=2.12
 spark=3
-vertxVersion=4.4.6
+# force version 4.5.1 of vertx to prevent issues initializing io.vertx.core.json.jackson.JacksonCodec,
+# which requires a newer version of jackson, which is not available in spark 2
+vertxVersion=4.5.1
 
 org.gradle.jvmargs=-Xmx4096m
